# tagbench

./: .gitignore  AGENTS.md  README - Copy (13).md  README - Copy (14).md  README - Copy (6).md  README - Copy (7).md  README - Copy (8).md  README - Copy (9).md  README.md  pyproject.toml
docs/: ADAPTERS.md
runs/: decomposition.csv  summary.csv  summary_all.csv
runs/ui_same_label_wall_20260105_165022/: wall_summary.csv
scripts/: collect_runs.py  estimate_runtime.py  export_selector_dataset.py  find_ui_wall.py  generate_ui_fixture.py  inspect_selector_dataset.py  plot_compute_vs_quality.py  run_bench.ps1  run_instruction_override_gate.ps1  run_reference.ps1  run_release_check.ps1  run_selector_bakeoff.ps1  run_selector_only.ps1  run_ui_adapter_stub.py  run_ui_popup_overlay_stub.ps1  run_ui_release_check.ps1  run_ui_same_label_wall.ps1  score_ui_fixture.py  summarize_results.py  summarize_ui_fixture.py  summarize_ui_wall.py  train_selector_linear.py
src/goldevidencebench/: baselines.py  book.py  cli.py  generate.py  grade.py  thresholds.py  ui_eval.py  ui_fixture.py  ui_generate.py  ui_summary.py  util.py
src/tagbench/: baselines.py  book.py  cli.py  generate.py  grade.py  model_runner.py  util.py
tests/: test_baselines.py  test_closed_book_guardrails.py  test_generate_invariants.py  test_grader.py  test_model_adapter_contract.py  test_model_runner_artifact_stats.py  test_retrieval_adapter_helpers.py  test_state_modes.py  test_twins.py  test_ui_cli.py  test_ui_eval.py  test_ui_fixture.py  test_ui_generate.py  test_ui_summary.py
(+8 files in other folders)
